WEBCERT-2166: Fixed package names after moving files in intygstjanst/tools/korrigering

--- a/tools/Korrigering-INTYG-1413/pom.xml
+++ b/tools/Korrigering-INTYG-1413/pom.xml
@@ -99,7 +99,7 @@
             <configuration>
               <archive>
                 <manifest>
-                  <mainClass>se.inera.certificate.tools.Korrigera</mainClass>
+                  <mainClass>se.inera.intyg.intygstjanst.tools.korrigering_intyg1413.Korrigera</mainClass>
                 </manifest>
               </archive>
               <descriptorRefs>
