WEBCERT-2166: Fixed package names after moving files in intygstjanst/tools/migrering

--- a/tools/Migrering/pom.xml
+++ b/tools/Migrering/pom.xml
@@ -98,7 +98,7 @@
             <configuration>
               <archive>
                 <manifest>
-                  <mainClass>se.inera.certificate.tools.Migrera</mainClass>
+                  <mainClass>se.inera.intyg.intygstjanst.tools.migrering.Migrera</mainClass>
                 </manifest>
               </archive>
               <descriptorRefs>
