--- a/web/pom.xml
+++ b/web/pom.xml
@@ -110,7 +110,11 @@
       <groupId>se.inera.intyg.intygstyper</groupId>
       <artifactId>sjukersattning</artifactId>
     </dependency>
-    
+    <dependency>
+      <groupId>se.inera.intyg.intygstyper</groupId>
+      <artifactId>sjukpenning-utokad</artifactId>
+    </dependency>
+
     <dependency>
       <groupId>commons-io</groupId>
       <artifactId>commons-io</artifactId>
