SIT-35: Skickar luse till FK (stub)

--- a/web/certificate-dev.properties
+++ b/web/certificate-dev.properties
@@ -23,3 +23,4 @@ registermedicalcertificatev3.endpoint.url = ${fk.baseUrl}/inera-certificate/regi
 sendmedicalcertificatequestionv1.endpoint.url = ${fk.baseUrl}/inera-certificate/send-certificate-question-stub
 registercertificatev1.endpoint.url = ${fk.baseUrl}/inera-certificate/register-certificate-stub
 revokemedicalcertificatev1.endpoint.url = ${fk.baseUrl}/inera-certificate/revoke-medical-certificate-stub
+registercertificatev2.endpoint.url = ${fk.baseUrl}/inera-certificate/register-certificate-stub-fk-parent
