--- a/web/recipient-dev.properties
+++ b/web/recipient-dev.properties
@@ -38,7 +38,7 @@
 #   FKORG                    for development mode
 recipient.FK.name = F\u00F6rs\u00E4kringskassan
 recipient.FK.logicalAddress = Test
-recipient.FK.certificateType = fk7263
+recipient.FK.certificateType = fk7263,luse
 
 # Defines the recipient TS (Transportstyrelsen)
 recipient.TS.name = Transportstyrelsen
