REHAB-64: Fungerande E2E impl. av TjK inkl. DB och bootstrap av data

--- a/pom.xml
+++ b/pom.xml
@@ -113,6 +113,11 @@
         <artifactId>common-web</artifactId>
         <version>${common.version}</version>
       </dependency>
+      <dependency>
+        <groupId>se.inera.intyg.common</groupId>
+        <artifactId>hsa-integration</artifactId>
+        <version>${common.version}</version>
+      </dependency>
 
       <!-- Intygstyper -->
       <dependency>
