--- a/web/pom.xml
+++ b/web/pom.xml
@@ -60,6 +60,10 @@
       <groupId>se.inera.intyg.common</groupId>
       <artifactId>common-schemas</artifactId>
     </dependency>
+    <dependency>
+      <groupId>se.inera.intyg.common</groupId>
+      <artifactId>hsa-integration</artifactId>
+    </dependency>
 
     <!-- RIVTA Schemas -->
     <dependency>
@@ -205,6 +209,21 @@
       <groupId>org.apache.activemq</groupId>
       <artifactId>activemq-broker</artifactId>
       <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>se.riv.infrastructure.directory.organization</groupId>
+      <artifactId>infrastructure-directory-organization-schemas</artifactId>
+      <version>1.1.RC5.1</version>
+    </dependency>
+    <dependency>
+      <groupId>se.inera.intyg.common</groupId>
+      <artifactId>hsa-integration</artifactId>
+      <version>0-SNAPSHOT</version>
+    </dependency>
+    <dependency>
+      <groupId>se.inera.intyg.clinicalprocess.healthcond.rehabilitation</groupId>
+      <artifactId>intyg-clinicalprocess-healthcond-rehabilitation-schemas</artifactId>
+      <version>0-SNAPSHOT</version>
     </dependency>
 
   </dependencies>
