--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,8 @@
     <rivta-insuranceprocess.version>3.1.0.1</rivta-insuranceprocess.version>
     <rivta-itintegration-monitoring.version>1.0.0.1</rivta-itintegration-monitoring.version>
 
+    <intyg-infrastructure-directory-organization.version>1.1.RC5.1</intyg-infrastructure-directory-organization.version>
+    <intyg-clinicalprocess-healthcond-rehabilitation.version>0.9.2</intyg-clinicalprocess-healthcond-rehabilitation.version>
     <intyg-clinicalprocess.version>1.0.1</intyg-clinicalprocess.version>
     <intyg-insuranceprocess.version>1.0.1</intyg-insuranceprocess.version>
     <intyg-transportstyrelsen.version>1.0.1</intyg-transportstyrelsen.version>
@@ -167,6 +169,11 @@
         <artifactId>itintegration-monitoring-schemas</artifactId>
         <version>${rivta-itintegration-monitoring.version}</version>
       </dependency>
+      <dependency>
+        <groupId>se.riv.infrastructure.directory.organization</groupId>
+        <artifactId>infrastructure-directory-organization-schemas</artifactId>
+        <version>${intyg-infrastructure-directory-organization.version}</version>
+      </dependency>
 
       <!-- Intyg Schemas -->
       <dependency>
@@ -183,6 +190,11 @@
         <groupId>se.inera.intyg.transportstyrelsen</groupId>
         <artifactId>intyg-transportstyrelsen-schemas</artifactId>
         <version>${intyg-transportstyrelsen.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>se.inera.intyg.clinicalprocess.healthcond.rehabilitation</groupId>
+        <artifactId>intyg-clinicalprocess-healthcond-rehabilitation-schemas</artifactId>
+        <version>${intyg-clinicalprocess-healthcond-rehabilitation.version}</version>
       </dependency>
 
     </dependencies>
