--- a/web/pom.xml
+++ b/web/pom.xml
@@ -65,6 +65,7 @@
     <dependency>
       <groupId>se.riv.clinicalprocess.healthcond.certificate</groupId>
       <artifactId>clinicalprocess-healthcond-certificate-schemas</artifactId>
+      <version>0-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>se.riv.insuranceprocess.healthreporting</groupId>
