--- a/persistence/pom.xml
+++ b/persistence/pom.xml
@@ -77,6 +77,10 @@
     </dependency>
     
     <dependency>
+	   <groupId>org.springframework.data</groupId>
+	   <artifactId>spring-data-jpa</artifactId>
+	</dependency>		
+    <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-context</artifactId>
     </dependency>
