INTYG-1626: Uppgradera AMQ java klient från 5.9.1 till 5.13.0

--- a/ansible/roles/intygstjanst-jarfiler/tasks/main.yml
+++ b/ansible/roles/intygstjanst-jarfiler/tasks/main.yml
@@ -1,9 +1,9 @@
 ---
 # file: roles/intygstjanst-jarfiler/tasks/main.yml
 
-- name: Download activemq-client-5.9.1.jar
-  get_url: url=http://repo1.maven.org/maven2/org/apache/activemq/activemq-client/5.9.1/activemq-client-5.9.1.jar
-           dest={{ tomcat_lib }}/activemq-client-5.9.1.jar
+- name: Download activemq-client-{{ activemq_version }}.jar
+  get_url: url=http://repo1.maven.org/maven2/org/apache/activemq/activemq-client/{{ activemq_version }}/activemq-client-{{ activemq_version }}.jar
+           dest={{ tomcat_lib }}/activemq-client-{{ activemq_version }}.jar
     
 - name: Download slf4j-api-1.6.4.jar
   get_url: url=http://repo1.maven.org/maven2/org/slf4j/slf4j-api/1.6.4/slf4j-api-1.6.4.jar
