--- a/web/certificate-dev.properties
+++ b/web/certificate-dev.properties
@@ -22,6 +22,7 @@ fk.baseUrl = http://localhost:8080
 registermedicalcertificatev3.endpoint.url = ${fk.baseUrl}/inera-certificate/register-medical-certificate-stub
 sendmedicalcertificatequestionv1.endpoint.url = ${fk.baseUrl}/inera-certificate/send-certificate-question-stub
 sendmessagetocarequestionv1.endpoint.url = ${fk.baseUrl}/inera-certificate/send-message-to-care-stub
+sendmessagetorecipientv1.endpoint.url = ${fk.baseUrl}/inera-certificate/send-message-to-recipient-stub
 registercertificatev1.endpoint.url = ${fk.baseUrl}/inera-certificate/register-certificate-stub
 revokemedicalcertificatev1.endpoint.url = ${fk.baseUrl}/inera-certificate/revoke-medical-certificate-stub
 registercertificatev2.endpoint.url = ${fk.baseUrl}/inera-certificate/register-certificate-stub-fk-parent
