--- a/web/pom.xml
+++ b/web/pom.xml
@@ -119,6 +119,10 @@
       <groupId>se.inera.intyg.intygstyper</groupId>
       <artifactId>sjukpenning-utokad</artifactId>
     </dependency>
+    <dependency>
+      <groupId>se.inera.intyg.intygstyper</groupId>
+      <artifactId>luae-fs</artifactId>
+    </dependency>
 
     <dependency>
       <groupId>commons-io</groupId>
