--- a/pom.xml
+++ b/pom.xml
@@ -154,7 +154,7 @@
       </dependency>
       <dependency>
         <groupId>se.inera.intyg.intygstyper</groupId>
-        <artifactId>luae-fs</artifactId>
+        <artifactId>luae_fs</artifactId>
         <version>${intygstyper.version}</version>
       </dependency>
 
