--- a/web/pom.xml
+++ b/web/pom.xml
@@ -121,7 +121,7 @@
     </dependency>
     <dependency>
       <groupId>se.inera.intyg.intygstyper</groupId>
-      <artifactId>luae-fs</artifactId>
+      <artifactId>luae_fs</artifactId>
     </dependency>
 
     <dependency>
