--- a/pom.xml
+++ b/pom.xml
@@ -152,6 +152,11 @@
         <artifactId>sjukpenning-utokad</artifactId>
         <version>${intygstyper.version}</version>
       </dependency>
+       <dependency>
+        <groupId>se.inera.intyg.intygstyper</groupId>
+        <artifactId>luae_na</artifactId>
+        <version>${intygstyper.version}</version>
+      </dependency>
 
       <!-- RIVTA Schemas -->
       <dependency>
