--- a/web/certificate-dev.properties
+++ b/web/certificate-dev.properties
@@ -26,6 +26,7 @@ sendmessagetorecipientv1.endpoint.url = ${fk.baseUrl}/inera-certificate/send-mes
 registercertificatev1.endpoint.url = ${fk.baseUrl}/inera-certificate/register-certificate-stub
 revokemedicalcertificatev1.endpoint.url = ${fk.baseUrl}/inera-certificate/revoke-medical-certificate-stub
 registercertificatev2.endpoint.url = ${fk.baseUrl}/inera-certificate/register-certificate-stub-fk-parent
+revokecertificatev1.endpoint.url = ${fk.baseUrl}/inera-certificate/revoke-certificate-rivta-stub
 
 ################################################
 #
