--- a/pom.xml
+++ b/pom.xml
@@ -112,6 +112,11 @@
       </dependency>
       <dependency>
         <groupId>se.inera.intyg.common</groupId>
+        <artifactId>common-services</artifactId>
+        <version>${common.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>se.inera.intyg.common</groupId>
         <artifactId>common-web</artifactId>
         <version>${common.version}</version>
       </dependency>
