--- a/web/pom.xml
+++ b/web/pom.xml
@@ -55,6 +55,10 @@
     </dependency>
     <dependency>
       <groupId>se.inera.intyg.common</groupId>
+      <artifactId>common-services</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>se.inera.intyg.common</groupId>
       <artifactId>logging-util</artifactId>
     </dependency>
     <dependency>
