--- a/web/build.gradle
+++ b/web/build.gradle
@@ -1,52 +1,75 @@
+description = 'Intygstjänsten (Web)'
 
 apply plugin: 'war'
+apply plugin: 'org.akhikhl.gretty'
 
-description = 'Intygstjänsten (Web)'
+test {
+  exclude '**/*IT*'
+}
+
+// TODO: make run of integration tests configurable
+task integrationTest(type: Test) {
+  include '**/*IT*'
+}
+
+buildscript {
+  repositories {
+    jcenter()
+  }
+
+  dependencies {
+    classpath 'org.akhikhl.gretty:gretty:+'
+  }
+}
+
 dependencies {
   compile project(':intygstjanst-persistence')
-    compile group: 'se.inera.intyg.common', name: 'common-support', version:'0-SNAPSHOT'
-    compile group: 'se.inera.intyg.common', name: 'common-services', version:'0-SNAPSHOT'
-    compile group: 'se.inera.intyg.common', name: 'logging-util', version:'0-SNAPSHOT'
-    compile group: 'se.inera.intyg.common', name: 'common-schemas', version:'0-SNAPSHOT'
-    compile group: 'se.inera.intyg.common', name: 'hsa-integration', version:'0-SNAPSHOT'
-    compile group: 'se.riv.clinicalprocess.healthcond.certificate', name: 'clinicalprocess-healthcond-certificate-schemas', version:'2.0.RC5.1'
-    compile group: 'se.riv.insuranceprocess.healthreporting', name: 'insuranceprocess-healthreporting-schemas', version:'3.1.0.1'
-    compile group: 'se.riv.itintegration.monitoring', name: 'itintegration-monitoring-schemas', version:'1.0.0.1'
-    compile group: 'se.inera.intyg.clinicalprocess.healthcond.certificate', name: 'intyg-clinicalprocess-healthcond-certificate-schemas', version:'1.0.1'
-    compile group: 'se.inera.intyg.insuranceprocess.healthreporting', name: 'intyg-insuranceprocess-healthreporting-schemas', version:'1.0.1'
-    compile group: 'se.inera.intyg.transportstyrelsen', name: 'intyg-transportstyrelsen-schemas', version:'1.0.1'
-    compile group: 'se.inera.intyg.intygstyper', name: 'fk7263', version:'0-SNAPSHOT'
-    compile group: 'se.inera.intyg.intygstyper', name: 'ts-bas', version:'0-SNAPSHOT'
-    compile group: 'se.inera.intyg.intygstyper', name: 'ts-diabetes', version:'0-SNAPSHOT'
-    compile group: 'se.inera.intyg.intygstyper', name: 'ts-parent', version:'0-SNAPSHOT'
-    compile group: 'se.inera.intyg.intygstyper', name: 'sjukersattning', version:'0-SNAPSHOT'
-    compile group: 'se.inera.intyg.intygstyper', name: 'sjukpenning-utokad', version:'0-SNAPSHOT'
-    compile group: 'se.inera.intyg.intygstyper', name: 'luae_fs', version:'0-SNAPSHOT'
-    compile group: 'se.inera.intyg.intygstyper', name: 'luae_na', version:'0-SNAPSHOT'
-    compile group: 'commons-io', name: 'commons-io', version:'2.4'
-    compile group: 'commons-lang', name: 'commons-lang', version:'2.6'
-    compile group: 'com.fasterxml.jackson.jaxrs', name: 'jackson-jaxrs-json-provider', version:'2.4.4'
-    compile group: 'org.apache.cxf', name: 'cxf-rt-transports-http', version:'3.1.3'
-    compile group: 'org.apache.cxf', name: 'cxf-rt-frontend-jaxrs', version:'3.1.3'
-    compile group: 'org.aspectj', name: 'aspectjrt', version:'1.7.1'
-    compile group: 'org.aspectj', name: 'aspectjweaver', version:'1.7.1'
-    compile group: 'org.springframework', name: 'spring-aop', version:'4.2.2.RELEASE'
-    compile group: 'org.springframework', name: 'spring-context', version:'4.2.2.RELEASE'
-    compile group: 'org.springframework', name: 'spring-jms', version:'4.2.2.RELEASE'
-    compile group: 'org.springframework', name: 'spring-context-support', version:'4.2.2.RELEASE'
-    compile group: 'org.springframework', name: 'spring-web', version:'4.2.2.RELEASE'
-    compile group: 'org.springframework', name: 'spring-webmvc', version:'4.2.2.RELEASE'
-    compile group: 'org.springframework', name: 'spring-tx', version:'4.2.2.RELEASE'
-    compile group: 'se.riv.infrastructure.directory.organization', name: 'infrastructure-directory-organization-schemas', version:'1.1.RC5.1'
-    compile group: 'se.inera.intyg.clinicalprocess.healthcond.rehabilitation', name: 'intyg-clinicalprocess-healthcond-rehabilitation-schemas', version:'1.0.0'
-    testCompile group: 'org.springframework', name: 'spring-test', version:'4.2.2.RELEASE'
-    testCompile group: 'xmlunit', name: 'xmlunit', version:'1.4'
-    testCompile group: 'org.hamcrest', name: 'hamcrest-all', version:'1.3'
-    testCompile group: 'com.jayway.restassured', name: 'rest-assured', version:'2.8.0'
-    testCompile group: 'com.jayway.restassured', name: 'json-schema-validator', version:'2.8.0'
-    testCompile group: 'org.antlr', name: 'ST4', version:'4.0.8'
-    providedCompile group: 'org.apache.geronimo.specs', name: 'geronimo-jms_1.1_spec', version:'1.1.1'
-    providedCompile group: 'javax.servlet', name: 'servlet-api', version:'2.5'
-    providedCompile group: 'org.apache.activemq', name: 'activemq-client', version:'5.13.0'
-    providedCompile group: 'org.apache.activemq', name: 'activemq-broker', version:'5.13.0'
+
+  compile 'se.inera.intyg.common:common-support:0-SNAPSHOT'
+  compile 'se.inera.intyg.common:common-services:0-SNAPSHOT'
+  compile 'se.inera.intyg.common:logging-util:0-SNAPSHOT'
+  compile 'se.inera.intyg.common:common-schemas:0-SNAPSHOT'
+  compile 'se.inera.intyg.common:hsa-integration:0-SNAPSHOT'
+  compile 'se.riv.clinicalprocess.healthcond.certificate:clinicalprocess-healthcond-certificate-schemas:2.0.RC5.1'
+  compile 'se.riv.insuranceprocess.healthreporting:insuranceprocess-healthreporting-schemas:3.1.0.1'
+  compile 'se.riv.itintegration.monitoring:itintegration-monitoring-schemas:1.0.0.1'
+  compile 'se.inera.intyg.clinicalprocess.healthcond.certificate:intyg-clinicalprocess-healthcond-certificate-schemas:1.0.1'
+  compile 'se.inera.intyg.insuranceprocess.healthreporting:intyg-insuranceprocess-healthreporting-schemas:1.0.1'
+  compile 'se.inera.intyg.transportstyrelsen:intyg-transportstyrelsen-schemas:1.0.1'
+  compile 'se.inera.intyg.intygstyper:fk7263:0-SNAPSHOT'
+  compile 'se.inera.intyg.intygstyper:ts-bas:0-SNAPSHOT'
+  compile 'se.inera.intyg.intygstyper:ts-diabetes:0-SNAPSHOT'
+  compile 'se.inera.intyg.intygstyper:ts-parent:0-SNAPSHOT'
+  compile 'se.inera.intyg.intygstyper:sjukersattning:0-SNAPSHOT'
+  compile 'se.inera.intyg.intygstyper:sjukpenning-utokad:0-SNAPSHOT'
+  compile 'se.inera.intyg.intygstyper:luae_fs:0-SNAPSHOT'
+  compile 'se.inera.intyg.intygstyper:luae_na:0-SNAPSHOT'
+  compile 'commons-io:commons-io:2.4'
+  compile 'commons-lang:commons-lang:2.6'
+  compile 'com.fasterxml.jackson.jaxrs:jackson-jaxrs-json-provider:2.4.4'
+  compile 'org.apache.cxf:cxf-rt-transports-http:3.1.3'
+  compile 'org.apache.cxf:cxf-rt-frontend-jaxrs:3.1.3'
+  compile 'org.aspectj:aspectjrt:1.7.1'
+  compile 'org.aspectj:aspectjweaver:1.7.1'
+  compile 'org.springframework:spring-aop:4.2.2.RELEASE'
+  compile 'org.springframework:spring-context:4.2.2.RELEASE'
+  compile 'org.springframework:spring-jms:4.2.2.RELEASE'
+  compile 'org.springframework:spring-context-support:4.2.2.RELEASE'
+  compile 'org.springframework:spring-web:4.2.2.RELEASE'
+  compile 'org.springframework:spring-webmvc:4.2.2.RELEASE'
+  compile 'org.springframework:spring-tx:4.2.2.RELEASE'
+  compile 'se.riv.infrastructure.directory.organization:infrastructure-directory-organization-schemas:1.1.RC5.1'
+  compile 'se.inera.intyg.clinicalprocess.healthcond.rehabilitation:intyg-clinicalprocess-healthcond-rehabilitation-schemas:1.0.0'
+
+  testCompile 'org.springframework:spring-test:4.2.2.RELEASE'
+  testCompile 'xmlunit:xmlunit:1.4'
+  testCompile 'org.hamcrest:hamcrest-all:1.3'
+  testCompile 'com.jayway.restassured:rest-assured:2.8.0'
+  testCompile 'com.jayway.restassured:json-schema-validator:2.8.0'
+  testCompile 'org.antlr:ST4:4.0.8'
+
+  providedCompile 'org.apache.geronimo.specs:geronimo-jms_1.1_spec:1.1.1'
+  providedCompile 'javax.servlet:servlet-api:2.5'
+  providedCompile 'org.apache.activemq:activemq-client:5.13.0'
+  providedCompile 'org.apache.activemq:activemq-broker:5.13.0'
 }
