--- a/persistence/pom.xml
+++ b/persistence/pom.xml
@@ -53,11 +53,6 @@
     </dependency>
 
     <dependency>
-      <groupId>joda-time</groupId>
-      <artifactId>joda-time</artifactId>
-    </dependency>
-
-    <dependency>
       <groupId>org.hibernate.javax.persistence</groupId>
       <artifactId>hibernate-jpa-2.1-api</artifactId>
     </dependency>
@@ -68,7 +63,7 @@
 
     <dependency>
       <groupId>org.jadira.usertype</groupId>
-      <artifactId>usertype.core</artifactId>
+      <artifactId>usertype.extended</artifactId>
     </dependency>
 
     <dependency>
