--- a/build.gradle
+++ b/build.gradle
@@ -8,11 +8,12 @@ ext.nexusPassword = System.properties['nexusPassword']
 allprojects  {
   apply plugin: 'maven'
 
+  def baseVersion = '0.0.'
+
   group = 'se.inera.intyg.intygstjanst'
   version = System.env.BUILD_NUMBER != null ? baseVersion + System.env.BUILD_NUMBER : '0-SNAPSHOT'
   rootProject.ext.commonVersion = (version == '0-SNAPSHOT') ? '0-SNAPSHOT' : baseVersion + '+'
   rootProject.ext.typerVersion = (version == '0-SNAPSHOT') ? '0-SNAPSHOT' : baseVersion + '+'
-
 }
 
 subprojects {
