--- a/persistence/build.gradle
+++ b/persistence/build.gradle
@@ -8,6 +8,11 @@ jar.duplicatesStrategy = DuplicatesStrategy.EXCLUDE
 dependencies {
   compile "se.inera.intyg.common:common-support:${commonVersion}"
   compile "se.inera.intyg.common:integration-util:${commonVersion}"
+  // TODO: this dependency is put here to make sure that the persistence project depends on both
+  // common and intygstyper, so that the parent build.gradle can find a resolved dependency for the
+  // maven publishing. We cannot at the moment evaluate the resolved dependencies in the web project, 
+  // b/c of some evaluation order conflict with the war plugin. This workaround solves the problem.
+  compile "se.inera.intyg.intygstyper:fk-parent:${typerVersion}"
 
   compile 'com.google.guava:guava:14.0.1'
   compile 'joda-time:joda-time:2.2'
