--- a/persistence/build.gradle
+++ b/persistence/build.gradle
@@ -15,26 +15,14 @@ dependencies {
   compile "se.inera.intyg.intygstyper:fk-parent:${typerVersion}"
 
   compile 'com.google.guava:guava:14.0.1'
-  compile 'joda-time:joda-time:2.2'
   compile 'org.hibernate.javax.persistence:hibernate-jpa-2.1-api:1.0.0.Final'
   compile 'org.hibernate:hibernate-entitymanager:4.3.11.Final'
-  compile 'org.jadira.usertype:usertype.core:3.1.0.CR2'
+  compile 'org.jadira.usertype:usertype.extended:5.0.0.GA'
   compile 'org.liquibase:liquibase-core:3.3.1'
   compile 'org.springframework:spring-context:4.2.2.RELEASE'
   compile 'org.springframework:spring-orm:4.2.2.RELEASE'
   compile 'org.springframework:spring-tx:4.2.2.RELEASE'
   compile 'org.springframework.data:spring-data-jpa:1.9.0.RELEASE'
-
-  // TODO: remove
-  // compile(group: 'org.springframework.data', name: 'spring-data-jpa', version:'1.9.0.RELEASE') {
-  //   exclude(module: 'spring-core')
-  //   exclude(module: 'spring-aop')
-  //   exclude(module: 'spring-beans')
-  //   exclude(module: 'spring-expression')
-  //   exclude(module: 'spring-jdbc')
-  //   exclude(module: 'spring-tx')
-  //   exclude(module: 'spring-orm')
-  // }
 
   testCompile 'org.springframework:spring-test:4.2.2.RELEASE'
 
