--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,10 @@ plugins {
 ext.nexusUsername = System.properties['nexusUsername']
 ext.nexusPassword = System.properties['nexusPassword']
 
+ext {
+  springVersion = "4.2.2.RELEASE"
+}
+  
 allprojects  {
   apply plugin: 'maven'
 
@@ -47,10 +51,6 @@ subprojects {
   jar.dependsOn(createVersionPropertyFile)
 
   dependencies {
-    compile 'ch.qos.logback:logback-classic:1.0.11'
-    compile 'org.slf4j:jcl-over-slf4j:1.7.5'
-    compile 'org.slf4j:log4j-over-slf4j:1.7.5'
-
     testCompile 'junit:junit:4.12'
     testCompile 'org.mockito:mockito-core:1.9.0'
   }
