--- a/persistence/build.gradle
+++ b/persistence/build.gradle
@@ -6,25 +6,20 @@ sourceSets.main.output.resourcesDir = sourceSets.main.output.classesDir
 jar.duplicatesStrategy = DuplicatesStrategy.EXCLUDE
 
 dependencies {
-  compile "se.inera.intyg.common:common-support:${commonVersion}"
-  compile "se.inera.intyg.common:integration-util:${commonVersion}"
-  // TODO: this dependency is put here to make sure that the persistence project depends on both
+  // TODO: these dependencies are put here to make sure that the persistence project depends on both
   // common and intygstyper, so that the parent build.gradle can find a resolved dependency for the
   // maven publishing. We cannot at the moment evaluate the resolved dependencies in the web project, 
   // b/c of some evaluation order conflict with the war plugin. This workaround solves the problem.
   compile "se.inera.intyg.intygstyper:fk-parent:${typerVersion}"
+  compile "se.inera.intyg.common:common-support:${commonVersion}"
 
-  compile 'com.google.guava:guava:14.0.1'
   compile 'org.hibernate.javax.persistence:hibernate-jpa-2.1-api:1.0.0.Final'
-  compile 'org.hibernate:hibernate-entitymanager:4.3.11.Final'
   compile 'org.jadira.usertype:usertype.extended:5.0.0.GA'
   compile 'org.liquibase:liquibase-core:3.3.1'
-  compile 'org.springframework:spring-context:4.2.2.RELEASE'
-  compile 'org.springframework:spring-orm:4.2.2.RELEASE'
-  compile 'org.springframework:spring-tx:4.2.2.RELEASE'
   compile 'org.springframework.data:spring-data-jpa:1.9.0.RELEASE'
+  compile "org.springframework:spring-tx:${springVersion}"
 
-  testCompile 'org.springframework:spring-test:4.2.2.RELEASE'
+  testCompile "org.springframework:spring-test:${springVersion}"
 
   testRuntime 'com.h2database:h2:1.3.174'
 }
