--- a/web/build.gradle
+++ b/web/build.gradle
@@ -48,10 +48,6 @@ buildscript {
 dependencies {
   compile project(':intygstjanst-persistence')
 
-  compile "se.inera.intyg.common:common-support:${commonVersion}"
-  compile "se.inera.intyg.common:common-services:${commonVersion}"
-  compile "se.inera.intyg.common:logging-util:${commonVersion}"
-  compile "se.inera.intyg.common:common-schemas:${commonVersion}"
   compile "se.inera.intyg.common:hsa-integration:${commonVersion}"
 
   compile "se.inera.intyg.intygstyper:ts-bas:${typerVersion}"
@@ -69,25 +65,12 @@ dependencies {
   }
 
   compile 'commons-io:commons-io:2.4'
-  compile 'commons-lang:commons-lang:2.6'
-  compile 'com.fasterxml.jackson.jaxrs:jackson-jaxrs-json-provider:2.4.4'
-  compile 'org.apache.cxf:cxf-rt-transports-http:3.1.3'
-  compile 'org.apache.cxf:cxf-rt-frontend-jaxrs:3.1.3'
-  compile 'org.aspectj:aspectjrt:1.7.1'
-  compile 'org.aspectj:aspectjweaver:1.7.1'
-  compile 'org.springframework:spring-aop:4.2.2.RELEASE'
-  compile 'org.springframework:spring-context:4.2.2.RELEASE'
-  compile 'org.springframework:spring-jms:4.2.2.RELEASE'
-  compile 'org.springframework:spring-context-support:4.2.2.RELEASE'
-  compile 'org.springframework:spring-web:4.2.2.RELEASE'
-  compile 'org.springframework:spring-webmvc:4.2.2.RELEASE'
-  compile 'org.springframework:spring-tx:4.2.2.RELEASE'
+  compile "org.springframework:spring-jms:${springVersion}"
   compile 'se.riv.infrastructure.directory.organization:infrastructure-directory-organization-schemas:1.1.RC5.2'
   compile 'se.inera.intyg.clinicalprocess.healthcond.rehabilitation:intyg-clinicalprocess-healthcond-rehabilitation-schemas:1.0.1'
 
-  testCompile 'org.springframework:spring-test:4.2.2.RELEASE'
+  testCompile "org.springframework:spring-test:${springVersion}"
   testCompile 'xmlunit:xmlunit:1.4'
-  testCompile 'org.hamcrest:hamcrest-all:1.3'
   testCompile 'com.jayway.restassured:rest-assured:2.8.0'
   testCompile 'com.jayway.restassured:json-schema-validator:2.8.0'
   testCompile 'org.antlr:ST4:4.0.8'
