--- a/web/build.gradle
+++ b/web/build.gradle
@@ -9,13 +9,19 @@ test {
 
 // TODO: make run of integration tests configurable
 task integrationTest(type: Test) {
-  systemProperty "integration.tests.baseUrl", "http://localhost:8080/"
+  if (project.hasProperty('jenkins-build')) {
+    systemProperty "integration.tests.baseUrl", project.getProperty('baseUri')
+  } else {
+    systemProperty "integration.tests.baseUrl", "http://localhost:8080/"
+  }
   include '**/*IT*'
 }
 
 gretty {
+  if (project.hasProperty('jenkins-build')) {
+    integrationTestTask = null
+  }
   contextPath = '/inera-certificate'
-
   contextConfigFile = file("src/main/webapp/WEB-INF/jetty-web.xml")
 
   jvmArgs = [
