--- a/ansible/roles/intygstjanst/tasks/main.yml
+++ b/ansible/roles/intygstjanst/tasks/main.yml
@@ -22,6 +22,7 @@
 - name: download intygstjanst-web-{{ version }}.war
   get_url: url=https://build-inera.nordicmedtest.se/nexus/content/repositories/{{ repo }}/se/inera/intyg/intygstjanst/intygstjanst-web/{{ version }}/intygstjanst-web-{{ version }}.war
            dest={{ releases_folder }}/intygstjanst-web-{{ version }}.war
+           timeout=120
   when: deploy_from_repo
 
 - name: copy intygstjanst-web-{{ version }}.war
