BUILD-ENV: Liquibase-runner för intygstjänsten

--- a/tools/liquibase-runner/build.gradle
+++ b/tools/liquibase-runner/build.gradle
@@ -1,8 +1,30 @@
 description = 'Intygstjänsten (Liquibase Runner)'
 
-dependencies {
-  compile project(':intygstjanst-persistence')
+apply plugin: 'application'
 
-  compile group: 'mysql', name: 'mysql-connector-java', version:'5.1.24'
-  compile group: 'org.liquibase', name: 'liquibase-core', version:'3.3.1'
+mainClassName = "liquibase.integration.commandline.Main"
+applicationDefaultJvmArgs = ["-Dfile.encoding=utf8"]
+
+startScripts << {
+    def intygstjanstPersistenceDependency = configurations.runtime.filter { it.name.startsWith("intygstjanst-persistence") }.singleFile.name
+
+    unixScript.text = unixScript.text.replaceAll(/"\$@"$/,
+            "--driver=com.mysql.jdbc.Driver --classpath=lib/${intygstjanstPersistenceDependency} --changeLogFile=changelog/changelog.xml \"\\\$@\"")
+    windowsScript.text = windowsScript.text.replaceAll(/%CMD_LINE_ARGS%/,
+            "--driver=com.mysql.jdbc.Driver --classpath=lib/${intygstjanstPersistenceDependency} --changeLogFile=changelog/changelog.xml %CMD_LINE_ARGS%")
+}
+
+artifacts {
+    archives distZip
+}
+
+configurations.runtime {
+    transitive = false
+}
+
+dependencies {
+  runtime project(':intygstjanst-persistence')
+
+  runtime group: 'mysql', name: 'mysql-connector-java', version:'5.1.24'
+  runtime group: 'org.liquibase', name: 'liquibase-core', version:'3.3.1'
 }
