--- a/web/build.gradle
+++ b/web/build.gradle
@@ -77,6 +77,7 @@ dependencies {
   compile 'se.inera.intyg.clinicalprocess.healthcond.rehabilitation:intyg-clinicalprocess-healthcond-rehabilitation-schemas:1.0.2'
   compile 'org.slf4j:slf4j-api:1.7.21'
   compile 'org.slf4j:log4j-over-slf4j:1.7.21'
+  compile "org.springframework.security:spring-security-taglibs:4.0.3.RELEASE"
 
   testCompile "org.springframework:spring-test:${springVersion}"
   testCompile 'xmlunit:xmlunit:1.4'
