--- a/web/build.gradle
+++ b/web/build.gradle
@@ -9,6 +9,7 @@ test {
 
 // TODO: make run of integration tests configurable
 task integrationTest(type: Test) {
+  outputs.upToDateWhen { false }
   if (project.hasProperty('jenkins-build')) {
     systemProperty "integration.tests.baseUrl", project.getProperty('baseUri')
   } else {
