--- a/build.gradle
+++ b/build.gradle
@@ -160,8 +160,8 @@ if (project.hasProperty('runSonar')) {
     sonarqube {
         properties {
             property "sonar.jacoco.reportPath", "$buildDir/jacoco/test.exec"
-            property "sonar.projectName", projectName
-            property "sonar.projectKey", projectId
+            property "sonar.projectName", "Intygstjänsten"
+            property "sonar.projectKey", "intygstjansten"
 
             // Address of SonarQube server
             property "sonar.host.url", "https://build-inera.nordicmedtest.se/sonar"
