--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ ext {
     activeMqVersion = "5.13.4"
     mysqlVersion = "5.1.39"
     h2Version = "1.3.176"
+    liquibaseVersion = "3.3.5"
 }
 
 allprojects  {
@@ -169,11 +170,6 @@ sonarqube {
             "**/exception/**",
             "**/*Exception*.java"
             ]
-    }
-}
-project(":intygstjanst-liquibase-runner") {
-    sonarqube {
-        skipProject = true
     }
 }
 
