--- a/persistence/build.gradle
+++ b/persistence/build.gradle
@@ -13,7 +13,7 @@ dependencies {
         exclude(module: 'hibernate-entitymanager')
     }
     compile 'org.hibernate:hibernate-entitymanager:4.3.11.Final'
-    compile 'org.liquibase:liquibase-core:3.3.1'
+    compile "org.liquibase:liquibase-core:${liquibaseVersion}"
     compile 'org.springframework.data:spring-data-jpa:1.9.0.RELEASE'
     compile "org.springframework:spring-tx:${springVersion}"
 
