DEVENV: återaktivera git push4

--- a/build.gradle
+++ b/build.gradle
@@ -148,6 +148,8 @@ String findResolvedVersion(Project project, String groupName) {
 task tagRelease {
     description = 'Tags the current head with the projects version.'
     doLast {
+        def credentials = new org.ajoberstar.grgit.Credentials(System.properties['githubUser'], System.properties['githubPassword'])
+        def grgit = org.ajoberstar.grgit.Grgit.open(dir: project.rootDir.absolutePath, creds: credentials)
         grgit.tag.add {
             name = version
             message = "Release of ${version}"
